--- a/Index.html
+++ b/Index.html
@@ -14,7 +14,7 @@
                 <li><a href="Index.html">Home</a></li>
                 <li><a href="About.html">About US</a></li>
                 <li><a href="#">Events</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
     </header>
